methods and builtin function can now have varargs